# dsas

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  openrave_container.def  openrave_container_README.md  openrave_pybind_cmakelists.txt  requirements.txt
qd/: .gitignore  Makefile  README.md  container.def  figure_data.json  manifest.yaml  requirements.txt  ribs  setup.cfg
qd/config/: test.gin
qd/config/collab_task/: map_elites.gin  surr_base.gin
qd/config/shared_autonomy/: cma_mae.gin  dqd.gin  dsage.gin  map_elites.gin  random.gin  surr_base.gin
qd/scripts/: run_local.sh
qd/src/: client.py  constraints.py  dump_config.py  main.py  manager.py  sol_postprocessors.py
qd/src/analysis/: extract_scenario.py  figures.py  heatmap.py  plot_metrics.py  supplemental.py  utils.py
qd/src/archives/: grid_archive.py  grid_archive_test.py
qd/src/emitters/: __init__.py  evolution_strategy_emitter.py  uniform_random_emitter.py
qd/src/mpl_styles/: archive_visualization.mplstyle
qd/src/scenario/: __init__.py  repair.py  scenario_config.py  scenario_manager.py  scenario_result.py
qd/src/schedulers/: __init__.py  scheduler.py  scheduler_test.py
qd/src/utils/: debugging.py  worker_state.py
scripts/: run_experiments.sh  run_slurm.sh  slurm_dashboard.sh  slurm_postprocess.sh
scripts/hpc/: cpu_hpc16.sh  hpc16.sh  hpc16_2day.sh  test.sh
src/comps/cbirrt2/: cbirrtproblem.cpp
src/morsel/: README.md
src/morsel/detector/: bitefinder.py  biteserver.py  bitetest.py  dev_topic.json  gen_plate.json  gen_plate_mask.py  ransac_test_options.json  save_images.json  softkinetic_settings.json  structureio_settings.json  test_image.json  verbose.json
src/morsel/viewer/: bite_visualization_rostest.html  bite_visualization_test.html  bite_visualization_test2.html  bite_visualization_test3.html  bite_visualization_test4.html  bitetest_ar.html  data.json  test.json
src/or_nlopt_ik/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
src/or_nlopt_ik/include/or_nlopt_ik/: nloptik.h
src/or_nlopt_ik/src/: nloptik.cpp  plugins.cpp
src/or_trac_ik/: CMakeLists.txt  README.md  package.xml
src/or_trac_ik/include/or_trac_ik/: or_trac_ik.hpp
src/or_trac_ik/src/: or_trac_ik.cpp  plugins.cpp
src/simple_environment/: CMakeLists.txt  package.xml  setup.py
src/simple_environment/scripts/: computeSummaryLog.py  genMapMovie.py  genMovie.py  gen_cov.py  gen_qd.py  plot_output.py  plot_robot_path.py  runBiteServing.py  saveMapImages.py  saveSummaryLog.py  scenarios.txt  startScenario.py  testHumanPath.py  testHumanPath3Points.py  testHumanPathObstacle.py  testHumanPathSingleOpenrave.py  visualizeElite.py  visualizeEliteJoystick.py  visualizeEliteManyCores.py  visualizeEliteManyCores2.py  visualizeEliteSingleOpenrave.py  visualizeEliteSingleOpenraveObstacle.py  visualizeEliteSingleOpenraveObstacleManyCores.py  visualizeEliteSingleOpenraveObstacle_3BC.py  visualizeHist.py  visualizeHist1D.py  visualizeMap.py  visualizeMapCareer.py  visualizeMapObstacle.py  (+1 more)
(+157 files in other folders)
