<package>
  <name>or_nlopt_ik</name>
  <version>0.1.1</version>
  <description>
    NLOPT Inverse Kinematic Solver.
  </description>
  <author>Stefanos Nikolaidis</author>
  <maintainer email="snikolai@andrew.cmu.edu">Stefanos Nikolaidis</maintainer>
  <license>unreleased</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openrave</build_depend>
  <build_depend>openrave_catkin</build_depend>
  <build_depend>nlopt</build_depend>
  <run_depend>openrave</run_depend>
  <run_depend>openrave_catkin</run_depend>
  <run_depend>nlopt</run_depend>
 </package>


