<?xml version="1.0"?>
<package>
  <name>or_trac_ik</name>
  <version>0.0.0</version>
  <description>Openrave wrapper for the trac_ik solver</description>

  <maintainer email="sjavdani@cs.cmu.edu">Shervin Javdani</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>openrave</build_depend>
  <build_depend>openrave_catkin</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>openrave</run_depend>
  <run_depend>openrave_catkin</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
